--- a/routing/src/app/app.component.html
+++ b/routing/src/app/app.component.html
@@ -4,7 +4,7 @@
   <li><a routerLink="about">About</a></li>
 </ul>
 <router-outlet></router-outlet>
-<button (click)="onClick()">Load</button>
-
-<!--<button *ngFor="let user of userService.users" (click)="getUser(user.id)"> Load {{user.name}}</button>-->
-
+<button (click)="onClick()">Move to {{moveTo}} </button>
+<div>
+  <button *ngFor="let user of userService.users" (click)="getUser(user.id)"> Load {{user.name}}</button>
+</div>
